Aggiunta interfaccia per il form di upload del materiale (non salva ancora i dati e il pulsante "pubblica" non fa niente) e la possibilità di selezionare il file da caricare (non è presente alcun controllo sulla dimensione del file).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,11 @@
     <string name="lingua2">Lingua:</string>
     <string name="applica_filtri_e_cerca">Applica Filtri e Cerca</string>
     <string name="resetta_i_filtri">Resetta i filtri</string>
+    <string name="corso">Corso:</string>
+    <string name="tipologia">Tipologia:</string>
+    <string name="seleziona_il_file">Seleziona il file</string>
+    <string name="nessun_file_selezionato">Nessun file selezionato</string>
+    <string name="consento_di_rendere_la_mia_mail_pubblica">Consento di rendere la mia mail pubblica.</string>
+    <string name="nome_del_materiale">Nome del materiale:</string>
+    <string name="pubblica">PUBBLICA</string>
 </resources>
