- La lista delle note adesso caricherà sempre i documenti "sample" ogni volta che l'app viene avviata - La pagina singola delle note adesso contiene informazioni "randomizzate" ogni volta che l'app viene avviata - Il download dei file sposterà i file "sample" e quelli scelti dall'utente in una cartella dedicata all'interno del dispositivo - La pagina dell'upload dei file adesso carica il file all'iterno della lista delle note e può essere scaricato (come una nota normale) - La pagina della cronologia dei download adesso mostra i file scaricati nella cartella dedicata all'interno del dispositivo + Sistemazione generale del codice per garantire l'implementazione dei cambiamenti sopra citati

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="seleziona_il_professore">Professore</string>
     <string name="seleziona_la_tipologia">Tipologia</string>
     <string name="seleziona_la_lingua">Lingua</string>
+    <string name="scarica">SCARICA</string>
 </resources>
