- Aggiunto il tasto per effettuare l'upload nella home. - Sistemata la cardview. - Implementato cambio lingua globale in tutta l'applicazione. 	BUG: lo spinner dedicato non aggiorna la voce quando si passa da anonimo a loggato (seppur le stringhe dell'interfaccia mantengano la selezione fatta in precedenza) 	BUG: nel dispositivo virtuale (API 22), la voce "email" nella pagina delle note non si aggiorna con le locales diverse (mentre dal livello di API 23 in poi si)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,53 +1,81 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name" translatable="false">CommUniDrive</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="nav_header_logo">Immagine del profilo dell\'utente</string>
-    <string name="nav_header_username">Nome Utente</string>
-    <string name="nav_header_gotoprofile">Vai al profilo</string>
+    <string name="nav_header_logo">User profile picture</string>
+    <string name="nav_header_username">Username</string>
+    <string name="nav_header_gotoprofile">Go to profile</string>
 
-    <string name="nav_header_anon_logo">Immagine del profilo dell\'utente anonimo</string>
-    <string name="nav_header_anon_username">Utente Anonimo</string>
-    <string name="nav_header_anon_gotoprofile">Accedi per visualizzare il profilo</string>
+    <string name="nav_header_anon_logo">Anonymous user profile picture</string>
+    <string name="nav_header_anon_username">Anonymous User</string>
+    <string name="nav_header_anon_gotoprofile">Log in to view profile</string>
 
-    <string name="drawer_logout">ESCI</string>
+    <string name="drawer_logout">LOGOUT</string>
     <string name="home">Home</string>
-    <string name="carica_appunti">Carica Appunti</string>
-    <string name="cronologia">Cronologia</string>
-    <string name="lingua">Lingua</string>
-    <string name="effettua_ricerca">Effettua ricerca</string>
-    <string name="filtri">FILTRI</string>
-    <string name="risultati_trovati">Risultati trovati</string>
-    <string name="filtro">Filtro</string>
-    <string name="universita">Università: </string>
-    <string name="dipartimento">Dipartimento: </string>
-    <string name="a_a">A.a. :</string>
-    <string name="professore">Professore:</string>
-    <string name="lingua2">Lingua:</string>
-    <string name="applica_filtri_e_cerca">Applica Filtri e Cerca</string>
-    <string name="resetta_i_filtri">Resetta i filtri</string>
-    <string name="corso">Corso:</string>
-    <string name="tipologia">Tipologia:</string>
-    <string name="seleziona_il_file">Seleziona il file</string>
-    <string name="nessun_file_selezionato">Nessun file selezionato</string>
-    <string name="consento_di_rendere_la_mia_mail_pubblica">Consento di rendere la mia mail pubblica.</string>
-    <string name="nome_del_materiale">Nome del materiale:*</string>
-    <string name="pubblica">PUBBLICA</string>
-    <string name="seleziona_l_universit">Università*</string>
-    <string name="seleziona_il_dipartimento">Dipartimento*</string>
-    <string name="seleziona_il_corso">Corso*</string>
-    <string name="seleziona_l_a_a">A.a.*</string>
-    <string name="seleziona_il_professore">Professore</string>
-    <string name="seleziona_la_tipologia">Tipologia*</string>
-    <string name="seleziona_la_lingua">Lingua*</string>
-    <string name="scarica">SCARICA</string>
+    <string name="carica_appunti">Upload Notes</string>
+    <string name="cronologia">History</string>
+    <string name="lingua">Language</string>
+    <string name="effettua_ricerca">Perform search</string>
+    <string name="filtri">FILTERS</string>
+    <string name="risultati_trovati">Results found</string>
+    <string name="filtro">Filter</string>
+    <string name="universita">University: </string>
+    <string name="dipartimento">Department: </string>
+    <string name="a_a">Academic year: </string>
+    <string name="professore">Professor:</string>
+    <string name="lingua2">Language:</string>
+    <string name="applica_filtri_e_cerca">Apply Filters and Search</string>
+    <string name="resetta_i_filtri">Reset Filters</string>
+    <string name="corso">Course:</string>
+    <string name="tipologia">Type:</string>
+    <string name="seleziona_il_file">Select File</string>
+    <string name="nessun_file_selezionato">No file selected</string>
+    <string name="consento_di_rendere_la_mia_mail_pubblica">I consent to make my email public.</string>
+    <string name="nome_del_materiale">Material Name:*</string>
+    <string name="pubblica">PUBLISH</string>
+    <string name="seleziona_l_universit">Select University*</string>
+    <string name="seleziona_il_dipartimento">Select Department*</string>
+    <string name="seleziona_il_corso">Select Course*</string>
+    <string name="seleziona_l_a_a">Select Academic Year*</string>
+    <string name="seleziona_il_professore">Select Professor</string>
+    <string name="seleziona_la_tipologia">Select Type*</string>
+    <string name="seleziona_la_lingua">Select Language*</string>
+    <string name="scarica">DOWNLOAD</string>
     <string name="email">email</string>
     <string name="password">password</string>
     <string name="username">username</string>
-    <string name="nome">nome</string>
-    <string name="cognome">cognome</string>
+    <string name="nome">name</string>
+    <string name="cognome">surname</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="descrizione_del_materiale">Descrizione del materiale*</string>
+    <string name="descrizione_del_materiale">Material Description*</string>
+    <string name="caricato_da">Uploaded by </string>
+    <string name="in_data"> on </string>
+    <string name="universit">University: </string>
+    <string name="dipartimentos">Degree: </string>
+    <string name="corsos">Course: </string>
+    <string name="anno_accademico">Academic Year: </string>
+    <string name="tipologia_materiale">Material Type: </string>
+    <string name="descrizione">Description: </string>
+    <string name="nome_utente">Username</string>
+    <string name="passwords">Password</string>
+    <string name="continua_in_modalit_anonima">Continue in anonymous mode!</string>
+    <string name="recupera_password">Recover password!</string>
+    <string name="login">Login</string>
+    <string name="oppure_registrati">Or register</string>
+    <string name="registrati">Register</string>
+    <string name="logins">Login</string>
+    <string name="accedi">Access</string>
+    <string name="registratis">Register</string>
+    <string name="profilo">Profile</string>
+    <string name="aggiungi_dettagli">Add Details</string>
+    <string name="modifica_password">Change Password</string>
+    <string name="register">Register</string>
+    <string name="already_registered">Already registered?</string>
+    <string name="login_now">Login now!</string>
+    <string name="cronologia_download">Download History</string>
+    <string name="supporto">Support</string>
+    <string name="carica">Upload</string>
 </resources>
