+ Sistemare un po' la grafica. 	BUG: colori delle scritte dei filtri inconsistente

--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -78,4 +78,5 @@
     <string name="cronologia_download">Cronologia download</string>
     <string name="supporto">Supporto</string>
     <string name="carica">Carica</string>
+    <string name="ricerca">Effettua ricerca</string>
 </resources>
